--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -46,21 +46,25 @@ jobs:
           nvcmp --file config.toml > result.tmp
           nvtake --file config.toml --all
 
+      # --form-string html="<html><pre><code>$RESULT</code></pre><hr /><pre><code>$LOG</code></pre></html>" \
       - name: Send Email
         shell: bash
-        # -F attachment=@${{ env.LOG_FILE }} \
         run: |
-          LOG=$(cat ${{ env.LOG_FILE }}) \
-          RESULT=$(cat result.tmp) \
+          # LOG=$(cat ${{ env.LOG_FILE }}) \
+          # RESULT=$(cat result.tmp) \
           DATE=$(date +"%Y-%m-%d") \
           && [[ ! -z $LOG ]] || [[ ! -z $RESULT ]] \
           && curl \
             -s \
             --user 'api:${{ secrets.MAILGUN_API_KEY }}' \
             https://api.mailgun.net/v3/${{ secrets.MAILGUN_DOMAIN_NAME }}/messages \
+            -H 'Content-Type: multipart/form-data' \
             -F from='nvchecker <postmaster@${{ secrets.MAILGUN_DOMAIN_NAME }}>' \
-            -F to=${{ secrets.EMAIL_TO }} -F subject="New version check result · $DATE" \
-            -F text="$RESULT" --form-string html="<html><pre><code>$RESULT</code></pre><hr /><pre><code>$LOG</code></pre></html>" \
+            -F to=${{ secrets.EMAIL_TO }} \
+            -F subject="New version check result · $DATE" \
+            -F text=@result.tmp \
+            -F attachment=@${{ env.LOG_FILE }} \
+            --form-string html="<html><pre><code>$RESULT</code></pre></html>" \
           || echo "No new versions"
           rm -f result.tmp ${{ env.LOG_FILE }}
 
