--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -48,7 +48,6 @@ jobs:
 
       # --form-string html="<html><pre><code>$RESULT</code></pre><hr /><pre><code>$LOG</code></pre></html>" \
       # LOG=$(cat ${{ env.LOG_FILE }}) \
-      # || echo "No new versions" \
       - name: Send Email
         shell: bash
         run: |
@@ -66,6 +65,7 @@ jobs:
             -F text=@result.tmp \
             -F attachment=@${{ env.LOG_FILE }} \
             --form-string html="<html><pre><code>$RESULT</code></pre></html>" \
+          || echo "No new versions" \
           rm -f result.tmp ${{ env.LOG_FILE }}
 
       # - https://github.com/actions/runner/issues/2033
